maze.lessons.maze.island.IslandMaze.scala.error
Escaper:8: error: value keepHandOnSideWall is not a member of Unit
possible cause: maybe a semicolon is missing before `value keepHandOnSideWall'?
    }  keepHandOnSideWall()
       ^